tests/dataset/tpc-ds/compiler/java/q2.error
javac error: exit status 1
/tmp/TestJavaCompiler_TPCDSQueriesq297617501/001/Q2.java:84: error: illegal start of type
    ? w;
    ^
/tmp/TestJavaCompiler_TPCDSQueriesq297617501/001/Q2.java:84: error: <identifier> expected
    ? w;
       ^
/tmp/TestJavaCompiler_TPCDSQueriesq297617501/001/Q2.java:86: error: illegal start of type
    WD(? w, DDateSkDWeekSeqDDayNameDYear d) {
       ^
3 errors
